--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -237,7 +237,7 @@ ul {
 
 @media (min-width: 1250px) {
     .category-block {
-        margin-bottom: 15;
+        margin-bottom: 15rem;
     }
 
     .grid-items {
